--- a/package.json
+++ b/package.json
@@ -9,8 +9,33 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "13.1.1",
-    "react-dom": "18.2.0"
+    "react-dom": "^18.2.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/strongsongky/MementoAI-frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/strongsongky/MementoAI-frontend/issues"
+  },
+  "homepage": "https://github.com/strongsongky/MementoAI-frontend#readme",
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
